# gitnote

./: .gitattributes  .gitignore  README.md  auto-commit.fish  docsify-server.sh
assets/: Note.icns  commit.alfredworkflow
docs/: _404.md  _sidebar.md  index.html
docs/cheatsheet/: vim.md
notes/: 7Z Usage.md  Arch Linux Installation (2).md  Arch Linux Setup.md  Arch Linux.md  Arch linux Installation.md  Aria2 Download.md  Awesome Rust GameDev.md  Chmod.md  Command꞉ aria2.md  Command꞉ git.md  Command꞉ grep.md  Command꞉ ln.md  Command꞉ tar.md  Command꞉ tmux.md  Docker Note.md  Firefox UI Modification.md  Git Note.md  Home.md  Karabiner Customized.md  Linux Authority.md  Linux Commands.md  Linux Variable.md  Linux common command.md  Mac Notes.md  Manjaro Setup.md  Mirrors.md  Neovim Note.md  Notes on Type Layouts and ABIs in Rust.md  Numpy Note.md  PyTorch Note.md  Python Note.md  Road to Computer Graphics.md  Run Docker GUI on macOS.md  Rust 中的 bin, lib, rlib, a, so 概念介绍.md  SSH login without password.md  Shell Commands.md  Tar Note.md  Tar Usage.md  Tmux Note.md  Untitled.md  (+4 more)
practise/: README.md
practise/tinyrenderer/: .gitignore  Cargo.toml  README.md  download_asset.py
practise/tinyrenderer/benches/: bresenham_line.rs  linesweeping.rs  rasterization.rs
practise/tinyrenderer/examples/: _0_tga.rs  _1_draw_line.rs  _2_draw_face.rs  _3_triangle_rasterization.rs  _4_face_rasterization.rs  _5_gouraud_shading.rs  _6_shader.rs  _7_shadow.rs
practise/tinyrenderer/src/: bresenham.rs  camera.rs  lib.rs  main.rs  mesh.rs  rasterization.rs  shader.rs  tga.rs
(+100 files in other folders)
