
[package]
name = "tinyrenderer"
version = "0.1.0"
authors = ["unknownue <usami-ssc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
vek = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bresenham_line"
harness = false

[[bench]]
name = "linesweeping"
harness = false
